--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,6 @@ nav a {
 #projects {
   padding:5rem 0px;
   font-family:Roboto, sans-serif;
-  /*background:linear-gradient(var(--background-color2),var(--background-color1));*/
 }
 
 .project-tiles {
@@ -145,6 +144,7 @@ nav a {
 }
 
 .project-tile {
+  position:relative;
   width:45%;
   height:45vh;
   padding:10px;
@@ -161,10 +161,11 @@ nav a {
 }
 
 .project-description {
-  position:relative;
+  position:absolute;
   width:100%;
   height:100%;
-  top:-95%;
+  top: 0;
+  left: 0;
   font-size:1.5rem;
   color:var(--text-color);
   padding:1rem;
